fixed an issue where side-bar is behind main-view

--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@
       align-self: end;
       flex-direction: row;
       flex-wrap: wrap;
+      z-index: 2;
     }
 
     .main-view {
@@ -253,6 +254,7 @@
       opacity: 0.75;
       position: absolute;
       border-radius: 3rem;
+      margin-left: calc(var(--side-bar-width)*2);
       width: 18rem;
       height: 18rem;
       z-index: -1;
